# generative-ai-examples

./: .env.example  Dockerfile  README.md  docker-compose.yml
app/: .gitignore  amazon_bedrock.py  config.py  file_utils.py  main.py  organize_medical_record_with_claude.py  prompt_templates.py  pyproject.toml  run_organize_medical_record
app/hello_world/: README.md  prompt_templates.py
app/inputs/: medical_history_note.txt
app/organize_medical_record/: README.md
src/: pyproject.toml  run_hello_world.py  run_organize_medical_record.py
src/common/: amazon_bedrock.py  config.py  llms.py
src/organize_medical_record/: README.md  prompt_templates.py
