[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.140"
langchain = "^0.2.7"
langchain-aws = "^0.1.10"
langchain-openai = "^0.1.15"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
